Added a new first-class transport for IE < 8. This uses shared memory via the obscure window.opener property to relay messages, making it as fast as postMessage while relying on no additional resources.

--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -15,6 +15,7 @@
                 document.write(unescape("%3Cscript src='../Socket.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../Rpc.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../stack/PostMessageTransport.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/NixTransport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../stack/NameTransport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../stack/HashTransport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../stack/ReliableBehavior.js' type='text/javascript'%3E%3C/script%3E"));
