Did some refactoring in order to add a proper ajax feature, and in order to support some upcoming features

--- a/src/xhr.html
+++ b/src/xhr.html
@@ -18,7 +18,12 @@
                         post: {
                             isAsync: true,
                             method: function(url, data, success, error){
-                                easyXDM.ajax("POST", url, data, success, error);
+                                easyXDM.ajax({
+                                    url: url,
+                                    data: data,
+                                    success: success,
+                                    success: error
+                                });
                             }
                         }
                     }
