--- a/src/xhr.html
+++ b/src/xhr.html
@@ -22,7 +22,7 @@
                                     url: url,
                                     data: data,
                                     success: success,
-                                    success: error
+                                    error: error
                                 });
                             }
                         }
