--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=100">
         <title>easyTest results</title>
         <script type="text/javascript">
             if (location.href.indexOf("src") !== -1) {
