Fixed a bug in xhr.html

--- a/src/xhr.html
+++ b/src/xhr.html
@@ -21,6 +21,7 @@
                                 easyXDM.ajax({
                                     url: url,
                                     data: data,
+                                    type: "json",
                                     success: success,
                                     error: error
                                 });
