Fixed the ajax method so that it also support sending data with non-POST requests

--- a/src/xhr.html
+++ b/src/xhr.html
@@ -20,6 +20,7 @@
                             method: function(url, data, success, error){
                                 easyXDM.ajax({
                                     url: url,
+                                    method: "POST",
                                     data: data,
                                     type: "json",
                                     success: success,
