Made the xhr.html file use the shorthand syntax

--- a/src/xhr.html
+++ b/src/xhr.html
@@ -15,18 +15,15 @@
                     local: "name.html"
                 }, {
                     local: {
-                        post: {
-                            isAsync: true,
-                            method: function(url, data, success, error){
-                                easyXDM.ajax({
-                                    url: url,
-                                    method: "POST",
-                                    data: data,
-                                    type: "json",
-                                    success: success,
-                                    error: error
-                                });
-                            }
+                        post: function(url, data, success, error){
+                            easyXDM.ajax({
+                                url: url,
+                                method: "POST",
+                                data: data,
+                                type: "json",
+                                success: success,
+                                error: error
+                            });
                         }
                     }
                 });
