Removed the dependencies on history.back and document.referrer from the NameTransport.

--- a/src/name.html
+++ b/src/name.html
@@ -11,43 +11,38 @@
         window.sendMessage = function(message, url){
             window.setTimeout(function(){
                 window.name = message;
-                location.href = url;
+                location.href = url + "," + encodeURIComponent(location.protocol + "//" + location.host + location.pathname);
             }, 0);
         };
         
         if (location.hash) {
             if (location.hash.substring(1, 2) === "_") {
+                var channel, url, hash = location.href.substring(location.href.indexOf("#") + 3), indexOf = hash.indexOf(",");
+                if (indexOf == -1) {
+                    channel = hash;
+                }
+                else {
+                    channel = hash.substring(0, indexOf);
+                    url = decodeURIComponent(hash.substring(indexOf + 1));
+                }
                 switch (location.hash.substring(2, 3)) {
                     case "2":
                         // NameTransport local
-                        window.parent.parent.easyXDM.Fn.get(location.hash.substring(3))(window.name);
-                        if (document.referrer) {
-                            location.href = document.referrer + "#_4" + location.hash.substring(3);
-                        }
-                        else {
-                            // This does not work in Safari 3
-                            history.back();
-                        }
+                        window.parent.parent.easyXDM.Fn.get(channel)(window.name);
+                        location.href = url + "#_4" + channel + ",";
                         break;
                     case "3":
                         // NameTransport remote
-                        var url = decodeURIComponent(location.hash.substring(3)), channel, guest;
-                        channel = url.substring(url.indexOf("#") + 1);
-                        guest = window.parent.frames[channel];
+                        var guest = window.parent.frames[channel];
                         if (!guest) {
                             throw new Error("unable to reference window");
                         }
                         guest.easyXDM.Fn.get(channel)(window.name);
-                        if (document.referrer) {
-                            location.href = document.referrer + "#_4" + channel;
-                        }
-                        else {
-                            history.back();
-                        }
+                        location.href = url + "#_4" + channel + ",";
                         break;
                     case "4":
                         // NameTransport idle
-                        var fn = window.parent.easyXDM.Fn.get(location.hash.substring(3) + "_load");
+                        var fn = window.parent.easyXDM.Fn.get(channel + "_load");
                         if (fn) {
                             fn();
                         }
