--- a/src/tests/test_rpc.html
+++ b/src/tests/test_rpc.html
@@ -13,6 +13,7 @@
                 document.write(unescape("%3Cscript src='../Fn.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../Socket.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../Rpc.js' type='text/javascript'%3E%3C/script%3E"));
+                document.write(unescape("%3Cscript src='../stack/SameOriginTransport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../stack/PostMessageTransport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../stack/NixTransport.js' type='text/javascript'%3E%3C/script%3E"));
                 document.write(unescape("%3Cscript src='../stack/NameTransport.js' type='text/javascript'%3E%3C/script%3E"));
