--- a/src/example/remoterpcbackend.html
+++ b/src/example/remoterpcbackend.html
@@ -11,28 +11,18 @@
             easyXDM.DomHelper.requiresJSON("../json2.js");
         </script>
         <script type="text/javascript">
-            var channel, remote;
-            /**
-             * When the window is finished loading start setting up the channel
-             */
-            window.onload = function(){
-            
+            var remote = new easyXDM.Rpc(/** The channel configuration*/{
+                local: "../name.html"
+            }, /** The configuration */ {
                 /**
-                 * When the channel is ready we create the interface
+                 *
+                 * @param {Object} rpc A JSON-RPC 2.0 request object
+                 * @param {Function} reply The callback method. Takes a single JSON-RPC 2.0 response object.
                  */
-                remote = new easyXDM.Rpc(/** The channel configuration*/{
-                    local: "../name.html"
-                }, /** The configuration */ {
-                    /**
-                     *
-                     * @param {Object} rpc A JSON-RPC 2.0 request object
-                     * @param {Function} reply The callback method. Takes a single JSON-RPC 2.0 response object.
-                     */
-                    handle: function(rpc, reply){
-                        alert("requested to execute procedure '" + rpc.method + "'");
-                    }
-                });
-            };
+                handle: function(rpc, reply){
+                    alert("requested to execute procedure '" + rpc.method + "'");
+                }
+            });
         </script>
     </head>
     <body>
