--- a/src/example/resize_iframe.html
+++ b/src/example/resize_iframe.html
@@ -5,7 +5,6 @@
         <script type="text/javascript" src="../easyXDM.debug.js">
         </script>
         <script type="text/javascript">
-            var transport;
             var REMOTE = (function(){
                 var remote = location.href;
                 switch (location.host) {
@@ -24,32 +23,28 @@
                 }
                 return remote.substring(0, remote.lastIndexOf("/"));
             }());
-            window.onload = function(){
+            
+            var transport = new easyXDM.Socket(/** The configuration */{
                 /**
-                 * When the window is finished loading start setting up the transport
+                 * Register the url to name.html, this must be an absolute path
+                 * or a path relative to the root.
+                 * @field
                  */
-                transport = new easyXDM.Socket(/** The configuration */{
-                    /**
-                     * Register the url to hash.html, this must be an absolute path
-                     * or a path relative to the root.
-                     * @field
-                     */
-                    local: "../name.html",
-                    /**
-                     * Register the url to the remote interface
-                     * @field
-                     */
-                    remote: REMOTE + "/resized_iframe.html",
-                    remoteHelper: REMOTE + "/../name.html",
-                    /**
-                     * Register the DOMElement that the generated IFrame should be inserted into
-                     */
-                    container: document.getElementById("embedded"),
-                    onMessage: function(message, origin){
-                        this.container.getElementsByTagName("iframe")[0].style.height = message + "px";
-                    }
-                });
-            };
+                local: "../name.html",
+                /**
+                 * Register the url to the remote interface
+                 * @field
+                 */
+                remote: REMOTE + "/resized_iframe.html",
+                remoteHelper: REMOTE + "/../name.html",
+                /**
+                 * Register the DOMElement that the generated IFrame should be inserted into
+                 */
+                container: document.getElementById("embedded"),
+                onMessage: function(message, origin){
+                    this.container.getElementsByTagName("iframe")[0].style.height = message + "px";
+                }
+            });
         </script>
     </head>
     <body>
