--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="../easyXDM.debug.js">
         </script>
         <script type="text/javascript">
-            var transport;
+            
             var REMOTE = (function(){
                 var remote = location.href;
                 switch (location.host) {
@@ -24,31 +24,27 @@
                 }
                 return remote.substring(0, remote.lastIndexOf("/"));
             }());
-            window.onload = function(){
+            var transport = new easyXDM.Socket(/** The configuration */{
                 /**
-                 * When the window is finished loading start setting up the transport
+                 * Register the url to hash.html, this must be an absolute path
+                 * or a path relative to the root.
+                 * @field
                  */
-                transport = new easyXDM.Socket(/** The configuration */{
+                local: "../name.html",
+                /**
+                 * Register the url to the remote interface
+                 * @field
+                 */
+                remote: REMOTE + "/remotetransport.html",
+                remoteHelper: REMOTE + "/../name.html",
+                onReady: function(){
                     /**
-                     * Register the url to hash.html, this must be an absolute path
-                     * or a path relative to the root.
-                     * @field
+                     * If we want to do something once the transport is ready then we can place it here
                      */
-                    local: "../name.html",
-                    /**
-                     * Register the url to the remote interface
-                     * @field
-                     */
-                    remote: REMOTE + "/remotetransport.html",
-                    remoteHelper: REMOTE + "/../name.html",
-                    onReady: function(){
-                        /**
-                         * Send a message to the other side
-                         */
-                        transport.postMessage("This is a message sent from " + location);
-                    }
-                });
-            };
+                }
+            });
+            // messages will be buffered until the transport is ready
+            transport.postMessage("This is a message sent from " + location);
         </script>
     </head>
     <body>
