Changed from using gEBI to passing the id of the element. This is needed as this is run prior to the DOM being ready.

--- a/src/example/methods.html
+++ b/src/example/methods.html
@@ -45,7 +45,7 @@
                 /**
                  * Register the DOMElement that the generated IFrame should be inserted into
                  */
-                container: document.getElementById("embedded"),
+                container: "embedded",
                 props: {
                     style: {
                         border: "2px dotted red",
