New feature and bug-fix release

--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,18 @@
     <body>
         <ul>
             <li>
+                2.4.4 02.08.10
+                <br/>
+                Fixed <a href="http://github.com/oyvindkinsey/easyXDM/issues/issue/23">http://github.com/oyvindkinsey/easyXDM/issues/issue/23</a>
+                <br/>
+                Implemented return of ajax error messages: <a href="http://github.com/oyvindkinsey/easyXDM/issues/issue/24">http://github.com/oyvindkinsey/easyXDM/issues/issue/24</a>
+                <br/>
+                Implemented lazy initialization: <a href="http://github.com/oyvindkinsey/easyXDM/issues/issue/25">http://github.com/oyvindkinsey/easyXDM/issues/issue/25</a>
+                <br/>
+                Implemented DOMContentReady detection: <a href="http://github.com/oyvindkinsey/easyXDM/issues/issue/26">http://github.com/oyvindkinsey/easyXDM/issues/issue/26</a>
+                <br/>
+            </li>
+            <li>
                 2.4.3 26.07.10
                 <br/>
                 Added two more transports, the SameOriginTransport and the FrameElementTransport.
@@ -14,8 +26,8 @@
             <li>
                 2.4.2 25.07.10
                 <br/>
-                Major improvements on the support for older browsers.  
-                The use of resize in the HashTransport to notify about incoming messages has now been removed as it was not reliant across browsers. 
+                Major improvements on the support for older browsers. 
+                The use of resize in the HashTransport to notify about incoming messages has now been removed as it was not reliant across browsers.  
                 The library has now been tested on IE6/7/8, Opera 10, Firefox 2, 3.6, Safari 3.2, 5 and Chrome 5, and there are now no tests that are failing. 
             </li>
             <li>
