New bug-fix release

--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,11 @@
     <body>
         <ul>
             <li>
+                2.4.5 03.08.10
+                <br/>
+                Fixed a bug in the dom_onReady function. This would cause easyXDM to load unreliably when loaded using a script loader.
+            </li>
+            <li>
                 2.4.4 02.08.10
                 <br/>
                 Fixed <a href="http://github.com/oyvindkinsey/easyXDM/issues/issue/23">http://github.com/oyvindkinsey/easyXDM/issues/issue/23</a>
