New bug-fix release

--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,12 @@
     <body>
         <ul>
             <li>
+                2.4.6 03.08.10
+                <br/>
+                Fixed a small bug in the RpcBehaviors error handling. The message passed back on errors was formatted wrongly with the [data]
+                field a property of the message instead of of the error object.
+            </li>
+            <li>
                 2.4.5 03.08.10
                 <br/>
                 Fixed a bug in the dom_onReady function. This would cause easyXDM to load unreliably when loaded using a script loader.
