New bug-fix release

--- a/src/changes.html
+++ b/src/changes.html
@@ -6,6 +6,15 @@
     <body>
         <ul>
             <li>
+                2.4.7 23.08.10
+                <br/>
+                Fixed <a href="http://github.com/oyvindkinsey/easyXDM/issues/issue/28">http://github.com/oyvindkinsey/easyXDM/issues/issue/28</a>
+                <br/>
+                Implemented consistent naming of the iframes so that they can be accessed using the frames collection.
+                <br/>
+                Improved the ReliableBehavior. The HashTransport is now working much better and is more deterministic.
+            </li>
+            <li>
                 2.4.6 03.08.10
                 <br/>
                 Fixed a small bug in the RpcBehaviors error handling. The message passed back on errors was formatted wrongly with the [data]
